<resources>

    <!-- Menu Gaveta  -->
    <string name="app_name">myRecipes</string>
    <string name="enter" />
    <string name="menu_logout" />
    <string name="menu_register_sweet" />
    <string name="menu__new_recipe_salty" />
    <string name="menu_account" />
    <string name="menu_home" />
    <string name="toggle_open" />
    <string name="toggle_close" />


    <!-- Tela Usuario Cadastro -->

    <string name="user_register_name">Nome</string>
    <string name="user_register_password">Senha</string>
    <string name="user_register_cadaster">CADASTRAR</string>
    <string name="user_cadaster_title">Cadastro de Usuários</string>
    <string name="user_register_email">Email</string>
    <string name="user_login_entry">ENTRAR</string>
    <string name="user_login_how_password">esqueceu a senha?</string>
    <string name="user_login_notregistred">Não tem cadastro?</string>
    <string name="user_login_register_here">CADASTRAR</string>
    <string name="user_cadaster_password" />
    <string name="user_cadaster_email" />
    <string name="user_login_title" />


    <!-- Array de tipos de comida -->
    <array name="tipos_culinaria">
        <item>Chinesa</item>
        <item>Brasileira</item>
        <item>Coreana</item>
        <item>Francesa</item>
        <item>BBQ</item>
        <item>Italiana</item>
        <item>Japonesa</item>
        <item>Mexicana</item>
    </array>

    <!-- Tela Usario Perfil -->

    <string name="user_profile_lastname">Sobrenome</string>
    <string name="user_profile_endereco">Endereço</string>
    <string name="user_profile_logadouro">Logradouro (rua/avendida)</string>
    <string name="user_profile_number">Número</string>
    <string name="user_profile_complement">Complemento (apto, casa, bloco)</string>
    <string name="user_profile_city">Cidade</string>
    <string name="user_profile_cep">CEP</string>
    <string name="user_profile_update">ATUALIZAR</string>
    <string name="user_profile_title">Perfil</string>


    <!-- array com os nomes da Unidades Federativas do Brasil -->
    <string-array name="uf">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>

</resources>