<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_menu_account"/>

    <item android:id="@+id/nav_register_salty"
        android:title="@string/menu__new_recipe_salty"
        android:icon="@drawable/ic_menu_recipes_salty"/>


    <item android:id="@+id/nav_register_sweet"
        android:title="@string/menu_register_sweet"
        android:icon="@drawable/ic_menu_recipes_sweet"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_menu_logout"/>


</menu>
