<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:orientation="vertical"
    android:gravity="center">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/menu_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_menu_account"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_nome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/user_register_name"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_sobrenome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/user_profile_lastname"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_sobrenome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:hint="@string/user_register_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_aniversario"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="4dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="2"
                    android:hint="@string/user_profile_aniversary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_aniversary"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/sp_uf"
                    style="@style/Widget.AppCompat.Spinner.DropDown"
                    android:layout_width="0dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:entries="@array/sexo" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_cidade"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/user_profile_city"
                    android:layout_weight="2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_cidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_cep"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/user_profile_cep"
                    android:layout_weight="1"/>




            </LinearLayout>

            <Button android:id="@+id/btn_user_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_update"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>